--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3",
     "gsap": "https://aistudiocdn.com/gsap@^3.13.0",
-    "phosphor-react": "https://aistudiocdn.com/phosphor-react@^1.4.1"
+    "phosphor-react": "https://aistudiocdn.com/phosphor-react@^1.4.1",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.1"
   }
 }
 </script>
